frontend/src/app/globals.css
@import "tailwindcss";
@import "highlight.js/styles/github-dark.css";

pre code:not(.hljs) {
  display: block;
  padding: 1em;
}
@plugin '@tailwindcss/typography';

:root {
  --background: #ffffff;
  --foreground: #171717;
  --border: #e5e7eb;
  --light-gray: #f5f5f5;
  --gray: #4b5563;
  --link-color: #2563eb;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-border: var(--border);
  --color-light-gray: var(--light-gray);
  --color-gray: var(--gray);
  --color-link-color: var(--link-color);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@theme {
  --animate-blink: blink 0.8s infinite;
}

@keyframes blink {
  0%,
  100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html {
  scrollbar-gutter: stable;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: "Noto Sans JP", "Helvetica Neue", Arial, sans-serif;
}

